--- a/Curs_4/Curs_4/Curs_4.vcxproj
+++ b/Curs_4/Curs_4/Curs_4.vcxproj
@@ -149,8 +149,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="lista_liste.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="quadratic_probing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="fisier.txt" />
