--- a/Curs_11/Curs_11/Curs_11.vcxproj.filters
+++ b/Curs_11/Curs_11/Curs_11.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="Source1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="fisier.txt">
+    <Text Include="fisier1.txt">
       <Filter>Resource Files</Filter>
     </Text>
-    <Text Include="fisier1.txt">
+    <Text Include="fisier2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="fisier.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
