--- a/Curs_13/Curs_13/Curs_13.vcxproj.filters
+++ b/Curs_13/Curs_13/Curs_13.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Huffman.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Criptare.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
